# sleepyland

./: .gitignore  LICENSE  README.md  docker-compose.yml  linux_rocky_setup.sh  linux_setup.sh  macos_setup.sh  win_setup.ps1
gui/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
gui/app/: routes.py
gui/app/services/: download_service.py  get_channel_service.py  graph_service.py  metrics_service.py  prediction_service.py
gui/app/utils/: all_models_metrics.csv  file_handling.py  file_validation.py  logging_config.py  sleepyland_recording_wise_metrics.csv
gui/static/: read_files.js  script.js  style.css
gui/static/javascripts/: channels.js  dynamics.js  fileHandling.js  main.js  navigation.js  networkRequests.js  plotting.js  theme.js  uiInteractions.js
gui/static/nsrr_file_path/: abc_annotation_files.txt  abc_edf_files.txt  apoe_annotation_files.txt  apoe_edf_files.txt  apples_annotation_files.txt  apples_edf_files.txt  ccshs_annotation_files.txt  ccshs_edf_files.txt  cfs_annotation_files.txt  cfs_edf_files.txt  chat_annotation_files.txt  chat_edf_files.txt  homepap_annotation_files.txt  homepap_edf_files.txt  mesa_annotation_files.txt  mesa_edf_files.txt  mnc_cnc_annotation_files.txt  mnc_cnc_edf_files.txt  mnc_dhc_annotation_files.txt  mnc_dhc_edf_files.txt  mnc_ssc_annotation_files.txt  mnc_ssc_edf_files.txt  mros_annotation_files.txt  mros_edf_files.txt  msp_annotation_files.txt  msp_edf_files.txt  nchsdb_annotation_files.txt  nchsdb_edf_files.txt  shhs_annotation_files.txt  shhs_edf_files.txt  (+6 more)
gui/templates/: index.html
(+210 files in other folders)
