[tool.poetry]
name = "guiapp"
version = "0.1.0"
description = ""
authors = ["Schümperli Santiago <santiago.schuemperli@student.supsi.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
